--- a/home.html
+++ b/home.html
@@ -8,6 +8,7 @@
 </head>
 
 <body>
+    <a href="about.html">about</a>
     <p>Paragraphs can contain many different kinds of information. A paragraph could contain a series of brief examples or a single long illustration of a general point. It might describe a place, character, or process; narrate a series of events; compare
         or contrast two or more things; classify items into categories; or describe causes and effects. Regardless of the kind of information they contain, all paragraphs share certain characteristics. One of the most important of these is a topic sentence.</p>
     <img src="https://k12.thoughtfullearning.com/sites/k12/files/teacherGuides/chapterOpeners/085_WritersExpress.jpg" width="500px" height="300px">
