--- a/index.html
+++ b/index.html
@@ -17,9 +17,19 @@
         </div>
         <h1>title_description</h1>
         <div style="display:flex"></div>
-        <div><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/4b/Dr._Seuss_WikiWorld_has_removed_fishbowl.png/510px-Dr._Seuss_WikiWorld_has_removed_fishbowl.png" width="300px" height="300px" />
-            <p>A cartoon is a type of visual art that is typically drawn, frequently animated, in an unrealistic or semi-realistic style. The specific meaning has evolved, but the modern usage usually refers to either: an image or series of images intended
-                for satire, caricature, or humor; or a motion picture that relies on a sequence of illustrations for its animation. Someone who creates cartoons in the first sense is called a cartoonist,[1] and in it.</p>
+        <div>
+            <div style="width: 300px;"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/4b/Dr._Seuss_WikiWorld_has_removed_fishbowl.png/510px-Dr._Seuss_WikiWorld_has_removed_fishbowl.png" width="300px" height="300px" />
+                <p>A cartoon is a type of visual art that is typically drawn, frequently animated, in an unrealistic or semi-realistic style. The specific meaning has evolved, but the modern usage usually refers to either: an image or series of images intended
+                    for satire, caricature, or humor; or a motion picture that relies on a sequence of illustrations for its animation. Someone who creates cartoons in the first sense is called a cartoonist,[1] and in it.</p>
+            </div>
+            <div style="width: 300px;"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/4b/Dr._Seuss_WikiWorld_has_removed_fishbowl.png/510px-Dr._Seuss_WikiWorld_has_removed_fishbowl.png" width="300px" height="300px" />
+                <p>A cartoon is a type of visual art that is typically drawn, frequently animated, in an unrealistic or semi-realistic style. The specific meaning has evolved, but the modern usage usually refers to either: an image or series of images intended
+                    for satire, caricature, or humor; or a motion picture that relies on a sequence of illustrations for its animation. Someone who creates cartoons in the first sense is called a cartoonist,[1] and in it.</p>
+            </div>
+            <div style="width: 300px;"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/4b/Dr._Seuss_WikiWorld_has_removed_fishbowl.png/510px-Dr._Seuss_WikiWorld_has_removed_fishbowl.png" width="300px" height="300px" />
+                <p>A cartoon is a type of visual art that is typically drawn, frequently animated, in an unrealistic or semi-realistic style. The specific meaning has evolved, but the modern usage usually refers to either: an image or series of images intended
+                    for satire, caricature, or humor; or a motion picture that relies on a sequence of illustrations for its animation. Someone who creates cartoons in the first sense is called a cartoonist,[1] and in it.</p>
+            </div>
         </div>
 </body>
 
