--- a/index.html
+++ b/index.html
@@ -31,6 +31,22 @@
                     for satire, caricature, or humor; or a motion picture that relies on a sequence of illustrations for its animation. Someone who creates cartoons in the first sense is called a cartoonist,[1] and in it.</p>
             </div>
         </div>
+
+        <h1>Nature</h1>
+        <div style="display: flex;">
+            <div style="width: 200px;">
+                <img src="../assets/pro1.jpg" width="200px" ; height="200px">
+                <p>Nature is the physical world and all life within it, providing essential resources like food, water, and air, as well as beauty and a sense of peace.</p>
+            </div>
+            <div style="width: 200px;">
+                <img src="../assets/pro2.jpg" width="200px" ; height="200px">
+                <p>Nature is the physical world and all life within it, providing essential resources like food, water, and air, as well as beauty and a sense of peace.</p>
+            </div>
+            <div style="width: 200px;">
+                <img src="../assets/pro2.jpg" width="200px" ; height="200px">
+                <p>Nature is the physical world and all life within it, providing essential resources like food, water, and air, as well as beauty and a sense of peace.</p>>
+
+            </div>
 </body>
 
 </html>
