--- a/index.html
+++ b/index.html
@@ -45,8 +45,17 @@
             <div style="width: 200px;">
                 <img src="../assets/pro2.jpg" width="200px" ; height="200px">
                 <p>Nature is the physical world and all life within it, providing essential resources like food, water, and air, as well as beauty and a sense of peace.</p>>
-
             </div>
+            <div style="width: 200px;">
+                <img src="../assets/pro2.jpg" width="200px" ; height="200px">
+                <p>Nature is the physical world and all life within it, providing essential resources like food, water, and air, as well as beauty and a sense of peace.</p>
+            </div>
+            <div style="width: 200px;">
+                <img src="../assets/pro2.jpg" width="200px" ; height="200px">
+                <p>Nature is the physical world and all life within it, providing essential resources like food, water, and air, as well as beauty and a sense of peace.</p>
+            </div>
+        </div>
+
 </body>
 
 </html>
