--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
         <h1>Nature</h1>
         <div style="display: flex;">
             <div style="width: 200px;">
-                <img src="../assets/pro1.jpg" width="200px" ; height="200px">
+                <img src="./assets/pro1.jpg" margin="20px" padding="10px" width="200px" height="200px" alt="flower" />
                 <p>Nature is the physical world and all life within it, providing essential resources like food, water, and air, as well as beauty and a sense of peace.</p>
             </div>
             <div style="width: 200px;">
-                <img src="../assets/pro2.jpg" width="200px" ; height="200px">
+                <img src="../assets/pro2.jpg" width="200px" ; margin="20px" padding="10px" height="200px">
                 <p>Nature is the physical world and all life within it, providing essential resources like food, water, and air, as well as beauty and a sense of peace.</p>
             </div>
             <div style="width: 200px;">
@@ -51,11 +51,31 @@
                 <p>Nature is the physical world and all life within it, providing essential resources like food, water, and air, as well as beauty and a sense of peace.</p>
             </div>
             <div style="width: 200px;">
-                <img src="../assets/pro2.jpg" width="200px" ; height="200px">
+                <img src="../assets/pro2.jpg" width="200px" ; height="200px" />
                 <p>Nature is the physical world and all life within it, providing essential resources like food, water, and air, as well as beauty and a sense of peace.</p>
             </div>
         </div>
-
+        <h1>Welcome</h1>
+        <a href="pic1.html">
+            <img src="./assets/img1.jpeg"></a>
+        <a href="pic2.html">
+            <img src="./assets/img2.jpeg"></a>
+        <a href="pic3.html">
+            <img src="./assets/img3.jpeg"></a>
+        <a href="pic4.html">
+            <img src="./assets/img4.jpeg"></a>
+        <a href="pic5.html">
+            <img src="./assets/img5.jpeg"></a>
+        <a href="pic6.html">
+            <img src="./assets/img6.jpeg"></a>
+        <a href="pic7.html">
+            <img src="./assets/img7.jpeg"></a>
+        <a href="pic8.html">
+            <img src="./assets/img8.jpeg"></a>
+        <a href="pic9.html">
+            <img src="./assets/img9.jpeg"></a>
+        <a href="pic10.html">
+            <img src="./assets/img10.jpeg"></a>
 </body>
 
 </html>
